force-app/main/default/objects/Product2/fields/MagnetProduct__c.field-meta.xml
<CustomField>
    <fullName>MagnetProduct__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MagnetProduct</label>
    <type>Checkbox</type>
</CustomField>