force-app/main/default/objects/Product2/fields/Quantity_temp_holder__c.field-meta.xml
<CustomField>
    <fullName>Quantity_temp_holder__c</fullName>
    <description>This field is used in aura components for storing temporary qty added in cart.</description>
    <label>Quantity temp holder</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>