force-app/main/default/objects/Product2/fields/UserRec__c.field-meta.xml
<CustomField>
    <fullName>UserRec__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>UserRec</label>
    <referenceTo>UserRec__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>